format tags and description; fix image not showing; fix #89

--- a/themes/escoladejornalismo/static/css/enois.less
+++ b/themes/escoladejornalismo/static/css/enois.less
@@ -804,6 +804,12 @@ body {
     }
   }
 
+  .portfolio-tags{
+    p {
+      color: #FF936F;
+      font-weight: bold;
+    }
+  }
   .portfolio-description{
     margin-top: 12px;
     width: 22%;
